tests/ui/tag.stderr
error: no #[tag] given
 --> $DIR/tag.rs:5:5
  |
5 |     x: String,
  |     ^^^^^^^^^

error: no #[tag] given
  --> $DIR/tag.rs:10:5
   |
10 |     x: String,
   |     ^^^^^^^^^

error: no #[tag] given
  --> $DIR/tag.rs:15:5
   |
15 |     V,
   |     ^

error: no #[tag] given
  --> $DIR/tag.rs:20:5
   |
20 |     V,
   |     ^
